# evorare

./: .gitignore  .importlinter  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2  limits.md
results/: v0.1.0a1_metrics.json  v0.1.0a2_metrics.json
scripts/: heartbeat.py  run_bench.py  verify_step.py
src/evorare/: __init__.py  cli.py  diversity.py  gate.py  genealogy.py  ingest.py  judge.py  sampling_validity.py  schema.py
src/evorare/adapters/: __init__.py  openevolve.py  shinka.py
src/evorare/experimental/: __init__.py  chao.py
src/evorare/featurize/: __init__.py  ast_hash.py  base.py  behavior.py  ngram.py
src/evorare/report/: __init__.py  json_report.py  svg_report.py
src/evorare/synth/: __init__.py  generators.py
tests/: test_cli.py  test_determinism.py  test_diversity.py  test_experimental.py  test_featurize.py  test_gates.py  test_genealogy.py  test_honest_marketing.py  test_ingest.py  test_judge.py  test_report.py  test_sampling_validity.py  test_schema.py  test_synth.py
